@@ -1,3 +1,8 @@
+2020-01-07 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_handlebox.c: Use ancillary pointer to parent window in
+      function geda_handle_box_realize.
+
 2020-01-02 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_image_menu_item.c: Update function documentation:
